--- a/Samples/SamplesBasicUI/UI/myDocument.uxml
+++ b/Samples/SamplesBasicUI/UI/myDocument.uxml
@@ -11,7 +11,7 @@
     </ui:Foldout>
     <ui:IMGUIContainer style="height: 40%; align-items: center; justify-content: center;">
         <ui:ScrollView show-vertical-scroller="true" horizontal-scroller-visibility="Hidden" style="align-items: center; background-color: rgb(47, 47, 47); width: 90%; height: 90%;">
-            <ui:Label display-tooltip-when-elided="true" name="Output" style="left: 0.5px; right: 1px; width: 98%; height: 550%; margin-left: 2px; margin-right: 4px; margin-top: 1%; margin-bottom: 2%; padding-left: 2%; padding-right: 2%; padding-top: 2%; padding-bottom: 2%;" />
+            <ui:Label display-tooltip-when-elided="true" name="Output" style="left: 0.5px; right: 1px; width: 98%; height: 50%; margin-left: 2px; margin-right: 4px; margin-top: 1%; margin-bottom: 2%; padding-left: 2%; padding-right: 2%; padding-top: 2%; padding-bottom: 2%; white-space: normal; color: rgb(255, 255, 255);" />
         </ui:ScrollView>
     </ui:IMGUIContainer>
 </ui:UXML>
